<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beginner.doughboys.ProfileActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/nameLayout"
        android:id="@+id/usernameLayout"
        android:layout_marginBottom="10dp">



        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileUsernameLabel"
            android:layout_weight="1"
            android:textSize="26dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:ems="10"
            android:id="@+id/profileUserName"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/underline" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttons"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-10dp">

        <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="goHome"
            android:layout_weight="1" />

        <Button
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:layout_weight="1"/>

        <Button
            android:text="@string/add_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:onClick="addReview" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:id="@+id/nameLayout"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileNameLabel"
            android:layout_weight="1"
            android:textSize="26dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/profileName"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/underline" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLayout"
        android:layout_below="@+id/usernameLayout">

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="26dp"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/password"
            android:ems="10"
            android:id="@+id/profilePassword"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/underline" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/passwordLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:id="@+id/profileScroll"
        android:layout_above="@+id/profileButtons">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/profileLabels"
                android:layout_marginRight="10dp"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/profileReviewInfo"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutScroll"
        android:id="@+id/profileButtons">

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="false"
            android:id="@+id/button5"
            android:onClick="changeProfileData"
            android:layout_weight="1" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:onClick="deleteProfile" />

    </LinearLayout>

</RelativeLayout>
