<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_review_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beginner.doughboys.ReviewDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurantNameTV"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurantCityTV"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:numStars="5"
                android:stepSize="1.0"></RatingBar>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/crust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:numStars="5"
                android:stepSize="0.5"></RatingBar>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:numStars="5"
                android:stepSize="0.5"></RatingBar>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/overall_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_weight="0" />

            <RatingBar
                android:id="@+id/overallRating"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:numStars="5"
                android:stepSize="0.5"></RatingBar>
        </LinearLayout>


        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="35dp"
            android:id="@+id/button8"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner_button"
            android:onClick="submitReview"/>


    </LinearLayout>


</RelativeLayout>
